css/style.css
/* --------------------------------------------------------------------------------------------------------------------------------------------------------------------

[COLORS]

- Background & Vela Alt Text (Yellowish-White): #FFFDF9;
- Text & Accents (Dark Gray): #262626;
- Unselected & Alt Accent (Light Gray): #A0A0A0;

- Vela Accent (Dark Blue): #24313D;
- Vela Alt Header 1 (Grayish-Blue): #758598;
- Vela Alt Header 2 (Dark Grayish-Blue): #586B7C;
- Vela Alt Background (Light Gray): #EFEFEF;

- FlashNotes Accent (Yellow): #F9EA3B;
- FlashNotes Background (Grayish-Blue): #37475A;
- FlashNotes Header 1 (Light Grayish-Blue): #758598;

[FONTS]

- font-family: 'EB Garamond', serif; (400(i), 700(i))
- font-family: 'Signika Negative', sans-serif; (700)

***

[GENERAL STYLING]

- box-sizing: border-box; Includes padding and border into all elements' width and height
- Asterisk selects all HTML elements
- Set basic rules for fonts across all pages
- "em" Specifies a length relative to the current font-size of the element; more responsive
- Container to set default padding on most elements

-------------------------------------------------------------------------------------------------------------------------------------------------------------------- */

html {
	scroll-behavior: smooth;
}

* {
	box-sizing: border-box;
}

body {
	background-color: #FFFDF9;
	font-family: 'EB Garamond', serif;
	font-size: 18px;
	font-weight: 400;
	line-height: 1.6;
	color: #262626;
}

h1, h2, h3, h4 {
	font-family: 'Signika Negative', sans-serif;
	line-height: 1.4;
}

h1 {
  font-size: 2.75em;
  font-weight: 700;
}

h2 {
  font-size: 1.80em;
  font-weight: 700;
}

h3 {
  font-size: 1.60em;
  font-weight: 400;
}
h4 {
  font-size: 1.35em;
  font-weight: 400;
}

.container {
	padding: 0 15px;
}

/* --------------------------------------------------------------------------------------------------------------------------------------------------------------------

[FADE-IN ANIMATIONS]

-------------------------------------------------------------------------------------------------------------------------------------------------------------------- */

/* ----------------- [WORK PAGE] ------------------ */

#hero h1 {
	animation-name: fadeIn;
	animation-duration: 0.6s;
	animation-timing-function: ease-out;
}

#hero p {
	animation-name: fadeIn;
	animation-duration: 0.8s;
	animation-timing-function: ease-out;
}

#work {
	animation-name: fadeIn;
	animation-duration: 1.4s;
	animation-timing-function: ease-out;
}

/* ----------------- [ABOUT PAGE] ------------------ */

.about-image {
	animation-name: fadeIn;
	animation-duration: 0.6s;
	animation-timing-function: ease-out;
}

.about-bio h1 {
	animation-name: fadeIn;
	animation-duration: 1.0s;
	animation-timing-function: ease-out;
}

.about-bio p {
	animation-name: fadeIn;
	animation-duration: 1.2s;
	animation-timing-function: ease-out;
}

.about-skills {
	animation-name: fadeIn;
	animation-duration: 1.4s;
	animation-timing-function: ease-out;
}

.about-lists {
	animation-name: fadeIn;
	animation-duration: 1.6s;
	animation-timing-function: ease-out;
}

.about-cv {
	animation-name: fadeIn;
	animation-duration: 1.8s;
	animation-timing-function: ease-out;
}

/* ----------------- [ANIMATION] ------------------ */

@keyframes fadeIn {
	from {
		opacity: 0;
		transform: translateY(400px);
	}
	to {
		opacity: 1;
		transform: translateY(0px);
	}
}

/* --------------------------------------------------------------------------------------------------------------------------------------------------------------------

[IMAGE STYLING]

- max-width: 100%; Images cannot scale up larger than their original size
- Reduced size of Profile Image on About Page
- Certain images span the entire width of the page

-------------------------------------------------------------------------------------------------------------------------------------------------------------------- */

img {
	max-width: 100%;
	height: auto;
}

.fullimage {
	display: flex;
	justify-content: center;
	width: 100%;
}

.fullimage.flash {
	display: flex;
	justify-content: center;
	width: 100%;
	margin: 0;
}

.centerimage {
	display: flex;
	justify-content: center;
	max-width: 100%;
}

.centerimage.flash-persona {
	display: flex;
	justify-content: center;
	width: 80%;
	margin: auto;
}

/* --------------------------------------------------------------------------------------------------------------------------------------------------------------------

[LINK STYLING]

- Changed color of in-text links and removed default underline

-------------------------------------------------------------------------------------------------------------------------------------------------------------------- */

a {
  color: #24313D;
  text-decoration: none;
}

a:hover, a:focus {
  color: #758598;
  text-decoration: underline;
}

a:visited, a:active {
  color: #586B7C;
}

/* --------------------------------------------------------------------------------------------------------------------------------------------------------------------

[BUTTON STYLING]

-------------------------------------------------------------------------------------------------------------------------------------------------------------------- */

.button {
  display: inline-block;
  border:none;
  background-color: #262626;
  color: #FFFDF9;
  font-family: 'Signika Negative', sans-serif;
  font-weight: 700;
  padding: 20px;
  text-align: center;
  text-decoration: none;
  margin: 2px 2px;
  border-radius: 50px;
  transition: 0.4s;
}

.button:hover, active, focus {
	color: #FFFDF9;
	opacity: 0.8;
	text-decoration: none;
	transition: 0.4s;
}

.button:visited {
   color: #FFFDF9;
   text-decoration: none;
}

.about-cv a {
	margin: 20px 0px;
	text-decoration: none;
}
/* ... */

